# ansible-collection-rke2

./: .ansible-lint-ignore  .gitignore  .yamllint  Makefile  README.md  devbox.json  galaxy.yml  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: bgp.yml  build.yml  components.yml  install.yml  lint.yml  molecule.yml  release.yml  strimzi.yml  update.yml  version.yml  zalando.yml
argocd/: cncpg.yml  gatekeeper.yml  keel.yml  mysql.yml  reflector.yml  sealedsecrets.yml  strimzi.yml
argocd/applications/: cncpg.yml  keel.yml  kserve-crd.yml  kserve.yml  monitor-crds.yml  mysql.yml  postgres-operator.yml  reflector.yml  sealedsecrets.yml  strimzi.yml  velero.yml
argocd/cilium/: hubble.yml
argocd/templates/: certmanager.yml  lognhorn.yml  metallb.yml
molecule/bgp/: bgp.yml  converge.yml  molecule.yml  verify.yml
molecule/common/: aws_destroy.yml  bgp.yml  cleanup.yml  configure.yml  deploy.yml  destroy.yml  init.yml  install.yml  libvirt.yml  prepare.yml  update.yml  verify.yml
molecule/components/: molecule.yml
molecule/converged/: molecule.yml
molecule/full/: molecule.yml
molecule/install/: molecule.yml  verify.yml
molecule/strimzi/: backup.yml  molecule.yml  verify.yml
molecule/update/: molecule.yml  verify.yml
molecule/velero/: backup.yml  molecule.yml  verify.yml
molecule/zalando/: destroy.yml  molecule.yml  verify.yml
playbooks/: cluster.yml  configure.yml  deploy.yml  init.yml  install.yml  prepare.yml  secrets.yml  uninstall.yml  update.yml
playbooks/templates/: certmanager.yml  (+4 more)
rke2/: cli.py
roles/: .gitignore
(+30 files in other folders)
