[project]
name = "pokerops-rke2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ansible>=11.5.0",
  "ansible-lint>=25.4.0",
  "boto3>=1.39.3",
  "botocore>=1.39.3",
  "deepmerge>=2.0",
  "dotenv-cli>=3.4.1",
  "github3-py>=4.0.1",
  "kubernetes>=32.0.1",
  "lxml>=5.4.0",
  "molecule>=25.4.0",
  "molecule-plugins>=23.7.0",
  "netaddr>=1.3.0",
  "passlib>=1.7.4",
  "pydantic>=2.11.7",
  "ruamel-yaml>=0.18.14",
  "typer>=0.16.0",
  "urllib3>=2.4.0",
  "xmltodict>=0.14.2",
  "yamllint>=1.37.1",
]

[project.scripts]
rke2 = "rke2.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rke2"]

[tool.hatch.build]
include = ["rke2/*.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 160
