[project]
name = "pokerops-rke2"
version = "0.7.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "pokerops-ansible-utils@git+https://github.com/pokerops/ansible-utils@master",
]

[project.scripts]
rke2 = "rke2.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rke2"]

[tool.hatch.build]
include = ["rke2/*.py"]

[tool.ruff]
line-length = 160

[tool.setuptools]
packages = []
